<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SSH Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hostname">Hostname</string>
    <string name="port">Port: 22 (default)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_secret_key">Select key(option)</string>

    <string name="add">add</string>

    <string name="setting_server">Setting</string>
    <string name="server_list">Server List</string>
    <string name="add_server">Add Server</string>
    <string name="remove_server">Remove Server</string>
    <string name="edit_server">Edit Server</string>
    <string name="update">UPD</string>
    <string name="update_server">Server information updated</string>
    <string name="change_language">日本語</string>
    <string name="donate">Donate</string>

    <string name="no_key_selected">No key selected</string>

    <string name="session_disconnected">session disconnected</string>
    <string name="key_error">Key error</string>
    <string name="unsupported_key">unsupported key format</string>
    <string name="cant_open_file">cant open file</string>

    <string name="select_file">Selected Key</string>
    <string name="not_select_file">not Selected Key</string>
    <string name="require_host_user">Please enter hostname and username</string>
    <string name="no_servers_to_remove">No servers to remove</string>
    <string name="server_removed">Server has been removed</string>
    <string name="a_server_select">Please select your server</string>
    <string name="cancel">Cancel</string>
    <string name="donate_message">Opening donation page. Would you like to proceed?</string>
    <string name="open_browser">Open Browser</string>
    <string name="connect">Connect</string>
    <string name="wifi_scan">Scan Wifi</string>
    <string name="wifi_start">"　　　Start Scan　　　"</string>
    <string name="pwifi_start">Please Start Scan</string>
    <string name="subnet">Subnet</string>
    <string name="graph_settings">Setting Graph View</string>
    <string name="scanning">Scanning...</string>
    <string name="scanned">Scan Completed</string>
    <string name="found_device">" devices found　　　　　　　"</string>>
    <string name="found_no_device">No device found</string>
    <string name="no_wifi">Not connected to WiFi</string>
    <string name="no_wifi_message">Please enable WiFi</string>
    <string name="open_wifi_setting">Open WiFi Settings</string>
    <string name="error_occurred">Error Occurred</string>

    <string name="disconnect">Disconnect</string>
    <string name="connection_success">Connection successful</string>
    <string name="connection_error">Connection error: %1$s</string>
    <string name="disconnected">Disconnected</string>
    <string name="monitoring_error">Monitoring error: %1$s</string>
    <string name="uptime_placeholder">Uptime: --</string>
    <string name="uptime_format">Uptime: %1$s</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnecting">disconnecting</string>

    <string name="add_jump_host">Add Via JumpHost</string>
    <string name="no_servers">no servers</string>
    <string name="select_jump_host">Select JumpHost</string>
    <string name="jump_host_target">JumpHost Target</string>
    <string name="select_key">Select Key</string>
    <string name="select_new_key">Select </string>
    <string name="remove_current_key">Remove</string>
    <string name="confirm_removal">Confirm Removal</string>
    <string name="jump_host_removal_warning">all servers using this jump host will also be removed. Continue?</string>
    <string name="remove_all">Remove All</string>
    <string name="servers_removed">all servers have been removed</string>
    <string name="warning">Warning</string>
    <string name="not_connected">not connected</string>
    <string name="graph">Graph</string>
</resources>