<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_top" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_add_server"
            android:title="@string/add_server" />

        <item android:title="@string/server_list">
            <menu>
                <!-- サーバーリストは動的に追加されます -->
            </menu>
        </item>
    </group>

    <group android:id="@+id/group_bottom" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_wifi_scan"
            android:title="WiFiスキャン" />
        <item
            android:id="@+id/nav_remove_server"
            android:title="@string/remove_server" />
        <item
            android:id="@+id/nav_language"
            android:title="@string/change_language" />
        <item
            android:id="@+id/nav_donate"
            android:title="@string/donate" />
    </group>
</menu>